html ui : correct allign overflow-tab-item

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/tabbox/TabBox.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/tabbox/TabBox.css
@@ -5,7 +5,6 @@
   margin-top: @group-margin-top;
   margin-left: @mandatory-indicator-width;
   white-space: nowrap;
-  overflow: hidden;
 
   & > .tab-item {
     position: relative;
@@ -54,13 +53,16 @@
   }
 
   & > .overflow-tab-item {
+    position: relative;
     display: inline-block;
     text-align: center;
     cursor: pointer;
-    padding: 0 20px;
+    padding: 0px 0px;
 
     &::before {
       #scout.font-icon();
+      position: relative;
+      bottom: -2px;
       font-size: 17px;
       color: @icon-color;
       content: @icon-ellipsis-v;
